Fixed overflow

--- a/css/custom.css
+++ b/css/custom.css
@@ -16,18 +16,20 @@
     font-size: 150%;
 }
 
+.ulbackground {
+    background-color: #248232;
+    overflow: auto;
+}
 
 ul.topnav {
   list-style-type: none;
   margin: 0;
   padding: 0;
   background-color: #248232;
-  z-index: 4;
 }
 
 ul.topnav li {
     float: left;
-    z-index: 4;
     background-color: #248232;
 }
 
@@ -72,7 +74,6 @@ body {
 
 /* Create three unequal columns that floats next to each other */
 .row {
-    z-index: 1;
     width: 100%;
     padding: 4px;
 }
@@ -219,7 +220,7 @@ img {
 
 .dropdown-content {
   display: none;
-  position: absolute;
+  position: fixed;
   background-color: #248232;
   min-width: 200px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
